--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@import "assets/fonts/Inter/inter.css";
+
+* {
+  font-family: Inter;
+  overflow: hidden;
+}
+
+body {
+  max-width: 100vw;
+  max-height: 100vh;
+}
