landing page done
landong page mostly done, a few tweaks left to do but nothing important (mostry teh text) and some desing issues

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,65 +1,5 @@
 
+
 <html>
-  <body>
-
-    <div class="name">
-      <h1>Joel</h1>
-      <h1>IMBERGAMO GUASCH</h1>
-    </div>
-    <img src="..\assets\images\progamming_guy.svg" alt="myself porgramming ilustration" class="programming_img">
-    <img src="..\assets\images\backgrownd1.svg" alt="" class="backgrownd1">
-    <img src="..\assets\images\backgrownd1-2.svg" alt="" class="backgrownd2">
-
-    <h2>QUI SUIS-JE?</h2>
-    <p>Je suis, un étudiant ingéniéur  à l'INSA Toulouse. Je suis passionée par la technologie et se suis toujours en train de m'informer et comprendre toutes les nouvelles technologiques. De plus j'aime beaucoup apprendre et je cherche toujours des neauveaux projets pour apprendre.
-
-      J'aime beauoup la programmation et j'ai travaille dans des projets personnels et proffessionels.</p>
-
-      <div class="social_media">
-
-        <a href="https://www.instagram.com/">
-          <div class="social_media_container">
-            <img src="..\assets\images\instagram_icon.svg" alt="instagram icon" class="social_media_img">
-          </div>
-        </a>
-
-        <div class="social_media_separator"></div>
-
-        <a href="https://www.instagram.com/">
-          <div class="social_media_container">
-            <img src="..\assets\images\icon_linkedin.svg" alt="instagram icon" class="social_media_img">
-          </div>
-        </a>
-
-        <div class="social_media_separator"></div>
-
-        <a href="https://www.instagram.com/">
-          <div class="social_media_container">
-            <img src="..\assets\images\icon_github.svg" alt="instagram icon" class="social_media_img">
-          </div>
-        </a>
-
-        <div class="social_media_separator"></div>
-
-        <a href="https://www.instagram.com/">
-          <div class="social_media_container">
-            <img src="..\assets\images\icon_mail.svg" alt="instagram icon" class="social_media_img">
-          </div>
-        </a>
-
-        <div class="social_media_separator"></div>
-
-        <a href="https://www.instagram.com/">
-          <div class="social_media_container">
-            <img src="..\assets\images\icon_phone.svg" alt="instagram icon" class="social_media_img">
-          </div>
-        </a>
-
-      </div>
-      <div class="down_arrow">
-        <img src="..\assets\images\down_arrow.svg" alt="down">
-      </div>
-
-
-  </body>
+  <app-landing-page></app-landing-page>
 </html>
