project cards done
now I should make the horizonlat gallery and solve the x scrolling problem

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -13,7 +13,42 @@
         <h2 >QUI SUIS-JE?</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
-      <img src="../assets/images/down_arrow.svg" alt="V" class="down-arrow">
+
+      <div class="social-media-grid">
+        <a href="http://www.instagram.com">
+          <div class="grid-item socail-media-container">
+            <img src="../assets/images/instagram_icon.svg" alt="instagram icon">
+          </div>
+        </a>
+
+        <a href="http://www.instagram.com">
+          <div class="grid-item socail-media-container">
+            <img src="../assets/images/icon_linkedin.svg" alt="instagram icon">
+          </div>
+        </a>
+
+        <a href="http://www.instagram.com">
+          <div class="grid-item socail-media-container">
+            <img src="../assets/images/icon_github.svg" alt="instagram icon">
+          </div>
+        </a>
+
+        <a href="http://www.instagram.com">
+          <div class="grid-item socail-media-container">
+            <img src="../assets/images/icon_mail.svg" alt="instagram icon">
+          </div>
+        </a>
+
+        <a href="http://www.instagram.com">
+          <div class="grid-item socail-media-container">
+            <img src="../assets/images/icon_phone.svg" alt="instagram icon">
+          </div>
+        </a>
+      </div>
+      <a href="#projects-gallery">
+          <img src="../assets/images/down_arrow.svg" alt="V" class="down-arrow">
+      </a>
+
     </div>
     </body>
 </html>
