--- a/src/app/projects-gallery/projects-gallery.component.scss
+++ b/src/app/projects-gallery/projects-gallery.component.scss
@@ -1,43 +1,33 @@
 
-section {
+#projects-gallery {
   height: 100vh;
-  width: 100vw;
-  overflow: hidden;
+  max-width: 100vw;
 }
-
-$project-card-width : 20vw;
-$project-card-height : 70vh;
-.grid-container {
-  margin-left: 3vw;
-  display: grid;
-  grid-template-rows: 15vh 5vh $project-card-height;
-  grid-column-gap: 4vw;
-}
-
 
 .title {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 2;
-  grid-row-end: 3;
+  padding: 4rem 0 0 3vw;
 }
 
-.porject-card-container {
-  grid-row-start: 3;
-  grid-row-end: 4;
-  margin-top: 2vh;
-  
-  max-width: 90vw;
-  overflow-y: scroll;
+
+$project-card-width : 30rem;
+$project-card-height : 70vh;
+.project-card-container{
+  margin: 5rem 0 0 6vw;
+  display: flex;
+  column-gap: 12rem;
+  width: 100%;
+  max-width: 80vw;
+  overflow: scroll;
 }
+
 
 .project-card {
+  margin: 1rem;
   box-shadow: -1px -1px 6px grey;
   border-width: 1px;
   border-radius: 2vh;
   width: $project-card-width;
   height: $project-card-height;
-  margin-left: 10vw;
 }
 
 #fisrt-project-card {
