--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,9 +4,11 @@
 * {
   font-family: Inter;
   margin: 0 0 0 0;
-  overflow-x: hidden;
+  font-size: 62.5%;
 }
 
+h1 {font-size: 2.4rem;}
+p {font-size: 1.6rem}
 
 body {
   /*background-color: #b5d9ff;
