--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,11 +1,6 @@
 
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+
+<section id="landing-page">
     <div class="grid-container">
       <h1 class="grid-item tite">Joel <br>IMBERGAMO GUASCH</h1>
       <img class="grid-item hero-image" src="../assets/images/landing_page_hero_image.svg" alt="Programming avatar image">
@@ -50,5 +45,4 @@
       </a>
 
     </div>
-    </body>
-</html>
+</section>
