afeter some scrolling tests mostly anithung done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
 <html>
   <app-landing-page></app-landing-page>
   <app-projects-gallery></app-projects-gallery>
+  <app-bottom-page></app-bottom-page>
 </html>
