--- a/src/app/projects-gallery/projects-gallery.component.html
+++ b/src/app/projects-gallery/projects-gallery.component.html
@@ -1,9 +1,9 @@
 <section id="projects-gallery">
   <h1 class="title">My Projects</h1>
-  
-  <div class="project-card-container">
 
-    <div class="project-card" id="fisrt-project-card">
+  <div data-simplebar ngx-simplebar class="project-card-container">
+
+    <div class="project-card" id="fisrt-project-card scroll">
         <div class="project-card-shadow">
           <div class="project-card-content">
             <h1>Minecraft Logs Search</h1>
