Mobiles version started

--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -84,3 +84,74 @@ $socail-media-container-size: 4vw;
   height: $socail-media-container-size;
   width: $socail-media-container-size;
 }
+
+
+
+@media only screen and (max-width: 600px) {
+  .grid-container {
+    display: inline;
+  }
+
+  .grid-item {
+    /*background-color: cyan;*/
+  }
+
+  .tite {
+    padding: 0vh 0vw 0vh 0vw;
+    font-size: 3.3rem;
+    font-weight: 500;
+    width: 100%;
+  }
+
+  .hero-image {
+    max-width: 60rem;
+    height: auto;
+    padding: 10vh 5vw 1vh 5vw;
+  }
+
+  .self-description {  }
+
+  .self-description h2 {
+    font-weight: 500;
+    font-size: 2.1rem;
+  }
+
+  .self-description p {
+    font-size: 1.25rem;
+  }
+
+
+  .down-arrow {
+    position: absolute;
+    left: 50vw;
+    top: 90vh;
+  }
+
+
+  $socail-media-container-size: 4vw;
+  .social-media-grid {
+    display: grid;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 6;
+    grid-row-end: 7;
+    grid-template-columns: repeat(5, $socail-media-container-size);
+    grid-column-gap: 1vw;
+    margin-top: 5vh;
+  }
+
+  .socail-media-container {
+    height: $socail-media-container-size;
+    width: $socail-media-container-size;
+    background-color: #92B4F4;
+    border-radius: 2vh;
+    display: flex;
+    justify-content: center;
+  }
+
+  .social-media-link {
+    height: $socail-media-container-size;
+    width: $socail-media-container-size;
+  }
+
+}
