--- a/src/app/projects-gallery/projects-gallery.component.scss
+++ b/src/app/projects-gallery/projects-gallery.component.scss
@@ -52,3 +52,7 @@ $project-card-height : 70vh;
   display: block;
   margin: 2vh auto 2vh auto;
 }
+
+@media only screen and (max-width: 600px) {
+  
+}
