Starting to seem sothing
Some animations added, routing for apreciations working all in a single component but modular and fixed an annoying bug with the arrow down btn

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 
 
 <html>
-  <app-landing-page></app-landing-page>
-  <app-projects-gallery></app-projects-gallery>
-  <app-bottom-page></app-bottom-page>
+  <router-outlet></router-outlet>
 </html>
