--- a/src/app/bottom-page/bottom-page.component.html
+++ b/src/app/bottom-page/bottom-page.component.html
@@ -1,4 +1,5 @@
 <section id="bottom-page">
   <p class="name">Joel Imgergamo Guasch</p>
-  
+
+  <p><a [routerLink]="['/appreciations']">Appreciations and Ressource info</a></p>
 </section>
