--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -40,9 +40,12 @@
           </div>
         </a>
       </div>
-      <a href="#projects-gallery">
-          <img src="../assets/images/down_arrow.svg" alt="V" class="down-arrow">
+      <a href="#projects-gallery" class="down-arrow">
+          <img src="../assets/images/down_arrow.svg" alt="V" >
       </a>
 
     </div>
 </section>
+
+<app-projects-gallery></app-projects-gallery>
+<app-bottom-page></app-bottom-page>
