--- a/src/app/projects-gallery/projects-gallery.component.html
+++ b/src/app/projects-gallery/projects-gallery.component.html
@@ -10,34 +10,37 @@
             <img src="../assets/images/minecraft_server_logo.svg" alt="server logo">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
           </div>
+          <div class="gallery-btn-container">
+            <button type="button" name="button" class="gallery-btn">Server Options</button>
+          </div>
         </div>
       </div>
 
-      <div class="project-card" id="fisrt-project-card">
+      <div class="project-card">
           <div class="project-card-shadow">
             <div class="project-card-content">
-              <h1>Minecraft Logs Search</h1>
-              <img src="../assets/images/minecraft_server_logo.svg" alt="server logo">
+              <h1>Work in progress</h1>
+              <img src="../assets/images/wip_img.jpg" alt="server logo">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
             </div>
           </div>
         </div>
 
-        <div class="project-card" id="fisrt-project-card">
+        <div class="project-card">
             <div class="project-card-shadow">
               <div class="project-card-content">
-                <h1>Minecraft Logs Search</h1>
-                <img src="../assets/images/minecraft_server_logo.svg" alt="server logo">
+                <h1>Work in progress</h1>
+                <img src="../assets/images/wip_img.jpg" alt="server logo">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
               </div>
             </div>
           </div>
 
-          <div class="project-card" id="fisrt-project-card">
+          <div class="project-card">
               <div class="project-card-shadow">
                 <div class="project-card-content">
-                  <h1>Minecraft Logs Search</h1>
-                  <img src="../assets/images/minecraft_server_logo.svg" alt="server logo">
+                  <h1>Work in progress</h1>
+                  <img src="../assets/images/wip_img.jpg" alt="server logo">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
                 </div>
               </div>
