--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,8 @@
 
 h1 {font-size: 2.4rem;}
 p {font-size: 1.6rem}
+li {font-size: 1.6rem}
+a {font-size: 1.6rem}
 
 body {
   /*background-color: #b5d9ff;
