--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,6 +1,12 @@
 
 
 <section id="landing-page">
+  <div class="mail-pop-up">
+    <h2>Personal: joelimgu@gmail.com</h2>
+    <h2>Proffesional: imbergam@etud.insa-toulouse.fr</h2>
+  </div>
+
+
     <div class="grid-container">
       <h1 class="grid-item tite">Joel <br>IMBERGAMO GUASCH</h1>
       <img class="grid-item hero-image" src="../assets/images/landing_page_hero_image.svg" alt="Programming avatar image">
@@ -10,33 +16,33 @@
       </div>
 
       <div class="social-media-grid">
-        <a href="http://www.instagram.com">
+        <a href="https://www.instagram.com/joelimbergamo/">
           <div class="grid-item socail-media-container">
             <img src="../assets/images/instagram_icon.svg" alt="instagram icon">
           </div>
         </a>
 
-        <a href="http://www.instagram.com">
+        <a href="https://www.linkedin.com/in/joel-imbergamo-guasch-3431b21a5/">
           <div class="grid-item socail-media-container">
-            <img src="../assets/images/icon_linkedin.svg" alt="instagram icon">
+            <img src="../assets/images/icon_linkedin.svg" alt="linkedin icon">
           </div>
         </a>
 
-        <a href="http://www.instagram.com">
+        <a href="https://github.com/joelimgu">
           <div class="grid-item socail-media-container">
-            <img src="../assets/images/icon_github.svg" alt="instagram icon">
+            <img src="../assets/images/icon_github.svg" alt="github icon">
           </div>
         </a>
 
-        <a href="http://www.instagram.com">
+        <div (click)='mail_click()'>
           <div class="grid-item socail-media-container">
-            <img src="../assets/images/icon_mail.svg" alt="instagram icon">
+            <img src="../assets/images/icon_mail.svg" alt="mail icon">
           </div>
-        </a>
+        </div>
 
-        <a href="http://www.instagram.com">
+        <a href="">
           <div class="grid-item socail-media-container">
-            <img src="../assets/images/icon_phone.svg" alt="instagram icon">
+            <img src="../assets/images/icon_phone.svg" alt="icon_phone icon">
           </div>
         </a>
       </div>
@@ -45,6 +51,8 @@
       </a>
 
     </div>
+
+
 </section>
 
 <app-projects-gallery></app-projects-gallery>
