everithing working miecraft page missing

--- a/src/app/appreciations/appreciations.component.html
+++ b/src/app/appreciations/appreciations.component.html
@@ -2,5 +2,6 @@
 <h1>Thanks to</h1>
 <ul>
   <li><a href="https://www.freepik.com/vectors/">https://www.freepik.com/vectors/</a> for Images used in this page</li>
+  <li>Icons made by <a href="https://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></li>
 </ul>
 </span>
