landing page done and info added

--- a/src/app/projects-gallery/projects-gallery.component.html
+++ b/src/app/projects-gallery/projects-gallery.component.html
@@ -3,15 +3,12 @@
 
   <div data-simplebar ngx-simplebar class="project-card-container">
 
-    <div class="project-card" id="fisrt-project-card scroll">
+    <div class="project-card">
         <div class="project-card-shadow">
           <div class="project-card-content">
-            <h1>Minecraft Logs Search</h1>
-            <img src="../assets/images/minecraft_server_logo.svg" alt="server logo">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
-          </div>
-          <div class="gallery-btn-container">
-            <button type="button" name="button" class="gallery-btn">Server Options</button>
+            <h1>Work in progress</h1>
+            <img src="../assets/images/wip_img.jpg" alt="server logo">
+            <p>{{wipDefault_Text}}</p>
           </div>
         </div>
       </div>
@@ -21,7 +18,7 @@
             <div class="project-card-content">
               <h1>Work in progress</h1>
               <img src="../assets/images/wip_img.jpg" alt="server logo">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
+              <p>{{wipDefault_Text}}</p>
             </div>
           </div>
         </div>
@@ -31,7 +28,7 @@
               <div class="project-card-content">
                 <h1>Work in progress</h1>
                 <img src="../assets/images/wip_img.jpg" alt="server logo">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
+                <p>{{wipDefault_Text}}</p>
               </div>
             </div>
           </div>
@@ -41,7 +38,7 @@
                 <div class="project-card-content">
                   <h1>Work in progress</h1>
                   <img src="../assets/images/wip_img.jpg" alt="server logo">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
+                  <p>{{wipDefault_Text}}</p>
                 </div>
               </div>
             </div>
