--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -198,30 +198,39 @@ $socail-media-container-size: 4vw;
 
 
 @media only screen and (max-width: 600px) {
+
+
+  #landing-page {
+    height: 110vh;
+    max-width: 100vw;
+  }
+
   .grid-container {
     display: inline;
   }
-
   .grid-item {  }
 
   .tite {
-    padding: 0vh 0vw 0vh 0vw;
-    font-size: 3.3rem;
+    margin: 5rem 0 0 2rem;
+    font-size: 3.4rem;
     font-weight: 500;
     width: 100%;
   }
 
   .hero-image {
-    max-width: 60rem;
+    max-width: 80vw;
     height: auto;
-    padding: 10vh 5vw 1vh 5vw;
+    padding: 0 5vw 1vh 5vw;
   }
 
-  .self-description {  }
+  .self-description {
+    margin: 2rem 2rem 2rem 2rem;
 
-  .self-description h2 {
-    font-weight: 500;
-    font-size: 2.1rem;
+    h2 {
+      margin: 3rem 0 0 0;
+      font-weight: 500;
+      font-size: 2.1rem;
+    }
   }
 
   .self-description p {
@@ -231,12 +240,16 @@ $socail-media-container-size: 4vw;
 
   .down-arrow {
     position: absolute;
-    left: 50vw;
+    left: 46vw;
     top: 90vh;
+
+    img {
+      width: 8vw;
+    }
   }
 
 
-  $socail-media-container-size: 4vw;
+  $socail-media-container-size: 12vw;
   .social-media-grid {
     display: grid;
     grid-column-start: 1;
@@ -244,8 +257,8 @@ $socail-media-container-size: 4vw;
     grid-row-start: 6;
     grid-row-end: 7;
     grid-template-columns: repeat(5, $socail-media-container-size);
-    grid-column-gap: 1vw;
-    margin-top: 5vh;
+    grid-column-gap: 7.5vw;
+    margin: 5vh 5vw 0 5vw;
   }
 
   .socail-media-container {
@@ -260,6 +273,76 @@ $socail-media-container-size: 4vw;
   .social-media-link {
     height: $socail-media-container-size;
     width: $socail-media-container-size;
+  }
+
+  .pop-up{
+    visibility: hidden;
+    display: grid;
+    position: fixed;
+    height: 33vh;
+    width: 75vw;
+    margin: 25vh 12.5vw 25vh 12.5vw;
+    border-radius: 1rem;
+    background-color: #92B4F4;
+    z-index: 2;
+
+
+    .text-container {
+      margin: auto;
+      .copy-element {
+        margin: 3rem 0 3rem 0;
+        display: flex;
+
+        h2 {
+          margin: .5rem 0 0 0;
+        }
+
+        img {
+          height: 4rem;
+          width: 4rem;
+          margin: 0 1rem 0 0;
+          cursor: pointer;
+        }
+
+        .tooltip {
+          position: relative;
+          display: inline-block;
+        }
+
+        .tooltip .tooltiptext {
+          visibility: hidden;
+          width: 140px;
+          background-color: #555;
+          color: #fff;
+          text-align: center;
+          border-radius: 6px;
+          padding: 5px;
+          position: absolute;
+          z-index: 1;
+          bottom: 150%;
+          left: 50%;
+          margin-left: -75px;
+          opacity: 0;
+          transition: opacity 0.3s;
+        }
+
+        .tooltip .tooltiptext::after {
+          content: "";
+          position: absolute;
+          top: 100%;
+          left: 50%;
+          margin-left: -5px;
+          border-width: 5px;
+          border-style: solid;
+          border-color: #555 transparent transparent transparent;
+        }
+
+        .tooltip:hover .tooltiptext {
+          visibility: visible;
+          opacity: 1;
+        }
+      }
+    }
   }
 
 }
