--- a/src/app/appreciations/appreciations.component.html
+++ b/src/app/appreciations/appreciations.component.html
@@ -3,5 +3,7 @@
 <ul>
   <li><a href="https://www.freepik.com/vectors/">https://www.freepik.com/vectors/</a> for Images used in this page</li>
   <li>Icons made by <a href="https://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></li>
+  <li>https://undraw.co</li>
+  <li><a href="https://www.vecteezy.com/free-vector/leaf">Leaf Vectors by Vecteezy</a></li>
 </ul>
 </span>
