--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -43,7 +43,7 @@
 
     <div class="grid-container">
       <h1 class="grid-item tite">Joel <br>IMBERGAMO GUASCH</h1>
-      <img class="grid-item hero-image" src="./../assets/images/landing_page_hero_image.svg" alt="Programming avatar image">
+      <img class="grid-item hero-image" src="/assets/images/landing_page_hero_image.svg" alt="Programming avatar image">
 
       <div  class="grid-item self-description">
         <h2 >Who am I?</h2>
