--- a/src/app/projects-gallery/projects-gallery.component.html
+++ b/src/app/projects-gallery/projects-gallery.component.html
@@ -7,7 +7,7 @@
         <div class="project-card-shadow">
           <div class="project-card-content">
             <h1>Work in progress</h1>
-            <img src="../assets/images/wip_img.jpg" alt="server logo">
+            <img src="assets/images/wip_img.jpg" alt="server logo">
             <p>{{wipDefault_Text}}</p>
           </div>
         </div>
@@ -18,7 +18,7 @@
           <div class="project-card-shadow">
             <div class="project-card-content">
               <h1>Work in progress</h1>
-              <img src="../assets/images/wip_img.jpg" alt="server logo">
+              <img src="assets/images/wip_img.jpg" alt="server logo">
               <p>{{wipDefault_Text}}</p>
             </div>
           </div>
@@ -28,7 +28,7 @@
             <div class="project-card-shadow">
               <div class="project-card-content">
                 <h1>Work in progress</h1>
-                <img src="../assets/images/wip_img.jpg" alt="server logo">
+                <img src="assets/images/wip_img.jpg" alt="server logo">
                 <p>{{wipDefault_Text}}</p>
               </div>
             </div>
@@ -38,7 +38,7 @@
               <div class="project-card-shadow">
                 <div class="project-card-content">
                   <h1>Work in progress</h1>
-                  <img src="../assets/images/wip_img.jpg" alt="server logo">
+                  <img src="assets/images/wip_img.jpg" alt="server logo">
                   <p>{{wipDefault_Text}}</p>
                 </div>
               </div>
