--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -40,7 +40,7 @@
       </div>
     </div>
   </div>
-
+  <img src="assets/images/user_icon.svg" alt="User, Login/register" class="user_icon">
     <div class="grid-container">
       <h1 class="grid-item tite">Joel <br>IMBERGAMO GUASCH</h1>
       <img class="grid-item hero-image" src="assets/images/landing_page_hero_image.svg" alt="Programming avatar image">
