--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -4,6 +4,15 @@
   max-width: 100vw;
 }
 
+.user_icon {
+  position: absolute;
+  width: 5rem;
+  height: auto;
+  right: 1rem;
+  top: 1rem;
+  cursor: pointer;
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: 37vw 60vw;
@@ -11,9 +20,7 @@
   padding-left: 3vw;
 }
 
-.grid-item {
-
-}
+.grid-item {}
 
 .tite {
   grid-column-start: 1;
@@ -40,17 +47,15 @@
   grid-column-end: 2;
   grid-row-start: 4;
   grid-row-end: 6;
-}
 
-.self-description h2 {
-  font-weight: 500;
-  font-size: 2.1rem;
+  h2 {
+    font-weight: 500;
+    font-size: 2.1rem;
+  }
+   p {
+    font-size: 1.25rem;
+  }
 }
-
-.self-description p {
-  font-size: 1.25rem;
-}
-
 
 .down-arrow {
   position: absolute;
@@ -79,6 +84,12 @@ $socail-media-container-size: 4vw;
   display: flex;
   justify-content: center;
   cursor: pointer;
+
+  img {
+    height: 65%;
+    width: auto;
+    margin: auto;
+  }
 }
 
 .social-media-link {
