--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,9 +10,11 @@
 
 h1 {font-size: 2.4rem;}
 h2 {font-size: 2.2rem;}
+h3 {font-size: 2rem;}
 p {font-size: 1.6rem}
 li {font-size: 1.6rem}
 a {font-size: 1.6rem}
+input {font-size: 1.6rem}
 
 body {
   /*background-color: #b5d9ff;
